--- a/src/app/layouts/navbar/navbar.component.html
+++ b/src/app/layouts/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <div class="flex items-center justify-between">
       <a class="flex-none text-xl font-semibold dark:text-white" href="#">Manga <span class="text-primary">LIFE</span></a>
       <div class="sm:hidden">
-        <a href="" class="hs-collapse-toggle p-2 inline-flex justify-center items-center gap-x-2   bg-white text-gray-800 disabled:opacity-50 disabled:pointer-events-none dark:bg-transparent dark:border-gray-700 dark:text-white dark:hover:bg-white/10 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600">
+        <a [routerLink]="['/panier']" routerLinkActive="router-link-active" class="hs-collapse-toggle p-2 inline-flex justify-center items-center gap-x-2   bg-white text-gray-800 disabled:opacity-50 disabled:pointer-events-none dark:bg-transparent dark:border-gray-700 dark:text-white dark:hover:bg-white/10 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600">
           <img src="../../../assets/cart.png" width="24" height="24" alt="toogle image">
         </a>
         <button type="button" class="hs-collapse-toggle p-2 inline-flex justify-center items-center gap-x-2   bg-white text-gray-800 disabled:opacity-50 disabled:pointer-events-none dark:bg-transparent dark:border-gray-700 dark:text-white dark:hover:bg-white/10 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600" data-hs-collapse="#navbar-collapse-with-animation" aria-controls="navbar-collapse-with-animation" aria-label="Toggle navigation">
